# aegis

./: .env.example  .gitignore  LICENSE  README.md  arkitektur.md  pyproject.toml  run_evaluation.py  test.py
demo/: __init__.py  app.py  callbacks.py  layout.py  snapshot_loader.py
demo/snapshots/: iteration_2_report.json
docs/: annotation_guidelines.md  arbetsflode.md  arkitektur.md  combination_annotation_guidelines.md  combination_review_consensus.md  iteration_1_demoforberedelse.md  iteration_1_planering.md  iteration_2_implementation.md  iteration_2_layer_substitutability.md  iteration_2_utvardering.md
evaluation/: __init__.py  confusion_matrix.py  matcher.py  metrics.py  report.py  runner.py
evaluation/dataset/: __init__.py  labeled_finding.py  labeled_text.py  loader.py
gdpr_classifier/: __init__.py  aggregator.py  config.py  pipeline.py
gdpr_classifier/core/: __init__.py  category.py  classification.py  finding.py  layer.py
gdpr_classifier/layers/: __init__.py
gdpr_classifier/prompts/: __init__.py  loader.py
scripts/: build_demo_snapshot.py  build_iteration2_pattern_ner_testdata.py  build_locations_orgs_mixed_testdata.py  build_namn_testdata.py  export_candidates_to_csv.py  generate_article9_candidates.py  generate_combination_candidates.py  probe_llm_models.py  probe_prompts.py  probe_results_2026-05-01.md  validate_article9_dataset.py  validate_combination_dataset.py  verify_combination_guidelines.py
scripts/demonstrations/: stub_substitution.py
tests/: __init__.py
tests/dataset/: test_dataset_offsets.py
tests/fixtures/: __init__.py  (+1 more)
(+63 files in other folders)
