[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gdpr-classifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
demo = ["dash>=2.0"]
nlp = ["spacy>=3.7"]
llm = ["requests>=2.31", "google-genai>=1.0", "pyyaml>=6.0"]
all = ["dash>=2.0", "spacy>=3.7"]

[tool.setuptools.packages.find]
include = ["gdpr_classifier*", "evaluation*", "demo*"]
exclude = ["tests*"]
